--- a/index.html
+++ b/index.html
@@ -93,24 +93,24 @@
         <dl>
           <dt class="skills">Summary</dt>
           <dd id="skills" itemprop="description">
-            I'm a master of mind. I love to solve, to describe, to analyze, to give precise
-            estimates also I love to investigate and implement different approaches
-            and methodologies in the projects. If you prefer to have meetings with existentialism
-            I'll prefer to make transactional analysis to reduce existential questions. If you'll
-            be nice we'll enjoy together. I like to have fun but I avoid the loyal fans. Life is
-            too short to be unresposible. I'm normal genuis and I prefer to dream about pleasure
-            instead of punishment. To work with you I must know your's existential answers and I
-            will be talk only about myself untill I find out how you want to work efficiency. I
-            care about others if they understand that I'm modest genius.
-            I love buddhism, yoga, astronomy, physics, mathematics, ethics. If you guess I should
-            be polite I'll be pretty and will not to tell you about psychiatry because I hate
-            psychotherapy without a bottle.
-            We are children, but someone ought to show how much he love adult porn or how many
-            children she can born, cook and prepare for adult life.
+            <p>I'm a master of mind. I love to solve, to describe, to analyze, to give precise
+              estimates also I love to investigate and implement different approaches
+              and methodologies in the projects. If you prefer to have meetings with existentialism
+              I'll prefer to make transactional analysis to reduce existential questions. If you'll
+              be nice we'll enjoy together. I like to have fun but I avoid the loyal fans. Life is
+              too short to be unresposible. I'm normal genuis and I prefer to dream about pleasure
+              instead of punishment. To work with you I must know your's existential answers and I
+              will be talk only about myself untill I find out how you want to work efficiency. I
+              care about others if they understand that I'm modest genius.</p>
+            <p>I love buddhism, yoga, astronomy, physics, mathematics, ethics. If you guess I should
+              be polite I'll be pretty and will not to tell you about psychiatry because I hate
+              psychotherapy without a bottle.</p>
+            <p>We are children, but someone ought to show how much he love adult porn or how many
+              children she can born, cook and prepare for adult life.</p>
             <ul>
               <li><a href="https://go.dev/">Go</a></li>
               <li class="notranslate">
-                <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>/ES6
+                <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>
               </li>
               <li>
                 <a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
@@ -126,9 +126,6 @@
               </li>
               <li>
                 <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>
-              </li>
-              <li>
-                <a href="https://en.wikipedia.org/wiki/Go_(programming_language)" class="notranslate">Go</a>
               </li>
               <li>
                 <a href="https://en.wikipedia.org/wiki/Solidity" class="notranslate">Solidity</a>
@@ -410,7 +407,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
     integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
   <script src="resume/script.js"></script>
-  <script src="resume/hired.js"></script>
+  <!-- <script src="resume/hired.js"></script> -->
   <div id="hired" style="opacity: 0; display: none">
     <h1>I am hired
       <!-- by <a target="_blank" href="https://brightdata.com/">brightdata.com</a>-->
