+ I need to believe to get the truth

--- a/index.html
+++ b/index.html
@@ -104,9 +104,18 @@
               care about others if they understand that I'm modest genius.</p>
             <p>I love buddhism, yoga, astronomy, physics, mathematics, ethics. If you guess I should
               be polite I'll be pretty and will not to tell you about psychiatry because I hate
-              psychotherapy without a bottle.</p>
+              psychotherapy without a bottle. I hate (grammar) nazi and prefer to keep mistakes if
+              it may annoy someone because existance is mistake and evolution is about diversity,
+              mutations and selection. People who do not want to make mistakes can live peacefully
+              in their "concentration camps" for this. And I prefer to talk about eugenics with
+              those who avoid these camps of peace. But I'm always welcome to be wrong because I am
+              a skeptic. I guess what I (or we) need to believe to get the truth. The truth often
+              born in a discussion and other discussions are meaningless for me.
+              The truth often born in a discussion and other discussions are meaningless for me.</p>
             <p>We are children, but someone ought to show how much he love adult porn or how many
-              children she can born, cook and prepare for adult life.</p>
+              children she can born, cook and prepare for adult life and I have to be a nanny.
+              The life of every creature is beautiful
+            </p>
             <ul>
               <li><a href="https://go.dev/">Go</a></li>
               <li class="notranslate">
