+ GraphQL in summary

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93viewmodel">MVVM</a>
               </li>
               <li>
-                <a href="https://en.wikipedia.org/wiki/Software_design_pattern" class="notranslate">Design patterns</a>
+                <a href="https://swagger.io/" class="notranslate">GraphQL</a>
               </li>
               <li>
                 <a href="https://www.npmjs.com/package/immutable" class="notranslate">immutable.js</a>
@@ -377,8 +377,8 @@
             <dl>
               <dt class="notranslate">Auxiliary</dt>
               <dd>
-                Utilities NPM package (like lodash)
-                <a href="https://www.npmjs.com/package/auxiliary">https://www.npmjs.com/package/auxiliary</a>
+                NPM package with functional programming utilities (like rambda or lodash)
+                <a href="https://www.npmjs.com/package/auxiliary">auxiliary.js</a>
               </dd>
               <dt class="notranslate">Comparator Generator</dt>
               <dd>
@@ -418,7 +418,7 @@
       </article>
     </div>
     <iframe src="https://en.wikipedia.org/wiki/Ethereum"></iframe>
-    <a id="pdf" href="https://joinmy.site/21W3EV.pdf" class="download" title="Save as PDF" target="_blank">
+    <a id="pdf" href="https://joinmy.site/GW19SW.pdf" class="download" title="Save as PDF" target="_blank">
       <img alt="Save as PDF" src="images/pdf.png" />
     </a>
   </div>
