--- a/index.html
+++ b/index.html
@@ -323,8 +323,7 @@
           <dd id="experience" class="robots-noindex" v-cloak>
             <div class="cloak">
               <span class="please">Something wrong happens. Please</span>
-              <a class="download"
-                href="https://drive.google.com/file/d/1MyQ90TPkcFUbmxyePnGrdrU6-QatBeJf/view?usp=sharing">download</a>
+              <a class="download" href="https://joinmy.site/GW19SW.pdf">download</a>
               <span class="pdf">resume in PDF format</span>
             </div>
             <div v-if="original">
@@ -350,7 +349,7 @@
               <span class="can-see">You can see this section at</span>
               <a href="https://kissarat.github.io/">kissarat.github.io</a>
               <span class="or">or</span>
-              <a class="download" href="https://grabify.link/TB2PKD">download</a>
+              <a class="download" href="https://joinmy.site/GW19SW.pdf">download</a>
               <span class="pdf">resume in PDF format</span>
             </div>
           </dd>
