--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             EN
           </button>
           <h2 class="notranslate">
-            Go, JavaScript, PHP, Python
+            JavaScript, PHP, Python
             <span class="easter">
               <span class="visible">Full</span>
               <span class="hidden">Fool</span>
@@ -62,6 +62,10 @@
             <div class="tile email">
               <div class="label">Email</div>
               <a itemprop="email" href="mailto:" class="value"></a>
+            </div>
+            <div class="tile facebook">
+              <div class="label">Facebook</div>
+              <a itemprop="facebook" href="https://www.facebook.com/kissarat/" class="value">kissarat</a>
             </div>
             <div class="tile location">
               <div class="label">Location</div>
@@ -100,8 +104,8 @@
           <dt class="summary">Summary</dt>
           <dd id="summary" itemprop="description">
             <p>
-              I love to investigate, to solve, to describe, to analyze and give accurate estimates.
-              I preter to probe and prove diverse approaches in my life and in the projects where it
+              I love to investigate, to solve, to describe, to analyse and give accurate estimates.
+              I prefer to probe and prove diverse approaches in my life and in the projects where it
               possible. I avoid talks and meetings "with existentialism" and may make
               <a href="https://en.wikipedia.org/wiki/Transactional_analysis"
                 title="Method of therapy wherein social interactions are analyzed to determine the ego state of the communicator as a basis for understanding behavior">
@@ -109,7 +113,7 @@
               to avoid existential questions in the future. I'm pragmatic and I guess that
               philosophy is a friend of developer. Any intelligent person must know psychology
               enough to communicate efficiently and motivate coworkers. I want to work with
-              constructive people. Life is too short to be unresposible.
+              constructive people. Life is too short to be unresponsible.
             </p>
             <p>
               I love astronomy, physics, mathematics, ethics, meditation and yoga. I'm a skeptic and
@@ -318,7 +322,7 @@
           <dd id="experience" class="robots-noindex" v-cloak>
             <div class="cloak">
               <span class="please">Something wrong happens. Please</span>
-              <a class="download" href="https://grabify.link/4G8E3H.pdf">download</a>
+              <a class="download" href="https://grabify.link/A7BQ7I.pdf">download</a>
               <span class="pdf">resume in PDF format</span>
             </div>
             <div v-if="original">
@@ -344,7 +348,7 @@
               <span class="can-see">You can see this section at</span>
               <a href="https://kissarat.github.io/">kissarat.github.io</a>
               <span class="or">or</span>
-              <a class="download" href="https://grabify.link/4G8E3H.pdf">download</a>
+              <a class="download" href="https://grabify.link/A7BQ7I.pdf">download</a>
               <span class="pdf">resume in PDF format</span>
             </div>
           </dd>
@@ -419,7 +423,7 @@
       </article>
     </div>
     <iframe src="https://en.wikipedia.org/wiki/Ethereum"></iframe>
-    <a id="pdf" href="https://grabify.link/4G8E3H.pdf" class="download" title="Save as PDF" target="_blank">
+    <a id="pdf" href="https://grabify.link/A7BQ7I.pdf" class="download" title="Save as PDF" target="_blank">
       <img alt="Save as PDF" src="images/pdf.png" />
     </a>
   </div>
