--- a/music/harmonics.html
+++ b/music/harmonics.html
@@ -2,15 +2,174 @@
 <html>
 
 <head>
-    <title>Template</title>
+    <title>Harmonics</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="music.js"></script>
+    <style>
+        main:not([v-cloak])>.cloak {
+            display: none;
+        }
+
+        main[v-cloak]> :not(.cloak) {
+            display: none;
+        }
+
+
+        form {
+            max-width: 200px;
+        }
+
+        button,
+        .form-group {
+            margin-top: 8px;
+        }
+
+        button.btn-secondary {
+            margin-left: 4px;
+        }
+
+        td.volume::after {
+            content: '%';
+        }
+
+        td.frequency::after {
+            content: ' Hz';
+        }
     </style>
 </head>
 
 <body>
-    <main>
-        <h1>Template</h1>
+    <main class="container" v-cloak>
+        <div class="cloak">
+            Loading...
+        </div>
+        <h1>Harmonics</h1>
+        <form @submit="play" class="form-group container">
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="harmonics">Number of harmonics</label>
+                        <input id="harmonics" type="number" class="form-control" v-model="harmonics" />
+                    </div>
+                    <div class="form-group">
+                        <label for="frequency"></label>Base frequency</label>
+                        <input id="frequency" type="text" class="form-control" v-model="base" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <div class="list-group" id="wave-type">
+                            <div v-bind:class="{'list-group-item': true, active: type.active }"
+                                v-for="type in waveTypes" @click="waveType = type.value">
+                                {{type.title}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary">Play</button>
+                    <button type="button" class="btn btn-secondary" @click="reset">Reset</button>
+                </div>
+            </div>
+        </form>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Volume</th>
+                    <th>Frequency</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="item in items">
+                    <td class="number">{{item.number}}</td>
+                    <td class="volume">{{item.volume * 100}}</td>
+                    <td class="frequency">{{item.frequency}}</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <script>
+        const store = new StateStore('harmonics', '1.0')
+
+        const PeriodicWaveType = {
+            sawtooth: 'Sawtooth',
+            sine: 'Sine',
+            square: 'Square',
+            triangle: 'Triangle',
+        }
+
+        function* getWaveTypes(active = 'sine') {
+            for (const value in PeriodicWaveType) {
+                yield {
+                    value: value,
+                    title: PeriodicWaveType[value],
+                    active: active === value
+                }
+            }
+        }
+
+        const getDefaultState = () => ({
+            harmonics: 0,
+            base: 261.626,
+            waveType: 'sine'
+        })
+
+        function* getFrequencies(frequency, harmonics = 0) {
+            for (let i = 0; i < harmonics + 1; i++) {
+                yield {
+                    number: i,
+                    volume: round(1 / (i + 1), 4),
+                    frequency: round(frequency * (i + 1), 3)
+                };
+            }
+        }
+
+        const play = (frequency, harmonics = 0, waveType = 'sine') => withAudioContext(context => {
+            for (const item of getFrequencies(frequency, harmonics)) {
+                const volume = context.createGain();
+                volume.gain.value = item.volume;
+                const oscillator = context.createOscillator();
+                oscillator.frequency.value = item.frequency;
+                oscillator.type = waveType;
+                oscillator.connect(volume);
+                volume.connect(context.destination);
+                oscillator.start()
+            }
+        })
+
+        const createComponent = () => Vue.createApp({
+            data: () => store.getState() || getDefaultState(),
+            computed: {
+                items() {
+                    return Array.from(getFrequencies(this.base, this.harmonics))
+                },
+                waveTypes() {
+                    return Array.from(getWaveTypes(this.waveType))
+                }
+            },
+            methods: {
+                play(e) {
+                    e.preventDefault();
+                    play(this.base, this.harmonics, this.waveType)
+                    store.setState(this.$data)
+                },
+
+                reset() {
+                    const data = getDefaultState()
+                    Object.assign(this.$data, data)
+                    // store.setState(data)
+                }
+            }
+        })
+
+        entrypoint(function () {
+            const component = createComponent()
+            component.mount('main')
+        })
     </script>
 </body>
 
