--- a/music/harmonics.html
+++ b/music/harmonics.html
@@ -25,7 +25,7 @@
             margin-top: 8px;
         }
 
-        button.btn-secondary {
+        button.btn:not(:first-child) {
             margin-left: 4px;
         }
 
@@ -72,6 +72,7 @@
                 <div class="col">
                     <button type="submit" class="btn btn-primary">Play</button>
                     <button type="button" class="btn btn-secondary" @click="reset">Reset</button>
+                    <button type="button" class="btn btn-danger" @click="stop">Stop</button>
                 </div>
             </div>
         </form>
@@ -162,6 +163,10 @@
                     const data = getDefaultState()
                     Object.assign(this.$data, data)
                     // store.setState(data)
+                },
+
+                stop() {
+                    setAudioContext(null);
                 }
             }
         })
