--- a/music/harmonics.html
+++ b/music/harmonics.html
@@ -176,6 +176,20 @@
             component.mount('main')
         })
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag("js", new Date());
+
+        gtag("config", "UA-58031952-14");
+    </script>
 </body>
 
 </html>
