--- a/music/harmonics.html
+++ b/music/harmonics.html
@@ -3,9 +3,12 @@
 
 <head>
     <title>Harmonics</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="WebAudio API harmonics generator" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="music.js"></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
     <style>
         main:not([v-cloak])>.cloak {
             display: none;
@@ -93,6 +96,10 @@
             </tbody>
         </table>
     </main>
+
+    <!-- Scripts -->
+    <script src="/labiak.js"></script>
+    <script src="music.js"></script>
     <script>
         const store = new StateStore('harmonics', '1.0')
 
@@ -171,24 +178,16 @@
             }
         })
 
-        entrypoint(function () {
-            const component = createComponent()
-            component.mount('main')
-        })
-    </script>
+        entrypoint(
+            [
+                LabiakLibrary.Vue
+            ],
+            function () {
+                const component = createComponent()
+                component.mount('main')
+            }
+        )
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag("js", new Date());
-
-        gtag("config", "UA-58031952-14");
     </script>
 </body>
 
