--- a/index.html
+++ b/index.html
@@ -383,6 +383,16 @@
                 any element of any HTML page. User can see
                 comment of other users
               </dd>
+              <dt class="notranslate">PHP array converter</dt>
+              <dd>
+                Converts JSON object into PHP associative array
+                <a href="/samples/php-array.html" class="anchor">php-array.html</a>
+              </dd>
+              <dt>Subweb</dt>
+              <dd>
+                Simple tools that helps text analysis
+                <a href="/subweb/analyze.html" class="anchor">subweb</a>
+              </dd>
               <dt class="notranslate">Auxiliary</dt>
               <dd>
                 NPM package with functional programming utilities (like rambda or lodash)
