--- a/music/harmonics.html
+++ b/music/harmonics.html
@@ -8,7 +8,7 @@
     <meta name="description" content="WebAudio API harmonics generator" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
     <style>
         main:not([v-cloak])>.cloak {
             display: none;
