--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <div class="lyceum">High school degree | Technical Lyceum</div>
             </div>
           </dd>
-          <dt class="own-projects">Own Projects</dt>
+          <dt id="own" class="own-projects">Own Projects</dt>
           <dd>
             <dl>
               <dt class="notranslate">Never Loose</dt>
@@ -392,11 +392,13 @@
               <dd>
                 Simple tools that helps text analysis
                 <a href="/subweb/analyze.html" class="anchor">subweb</a>
+                (source code at <a href="https://github.com/kissarat/subweb" class="anchor">github.com</a>)
               </dd>
-              <dt class="notranslate">Auxiliary</dt>
+              <dt class="notranslate">Piano</dt>
               <dd>
-                NPM package with functional programming utilities (like rambda or lodash)
-                <a href="https://www.npmjs.com/package/auxiliary">auxiliary.js</a>
+                Simple <a href="/music/#piano" class="anchor">piano</a> based on WebAudio API
+                <a href="https://github.com/kissarat/kissarat.github.io/tree/master/music" class="anchor">source
+                  code</a>
               </dd>
               <dt class="notranslate">prom.ua JSON gateway</dt>
               <dd>
