+ samples/xo.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.9" />
-  <meta name="description" content="Go, JavaScript, PHP, Python Full Stack Developer" />
+  <meta name="description" content="Node.js Full Stack Developer" />
+  <meta name="author" content="Taras Labiak">
   <title>Taras Labiak - Resume</title>
+  <meta property="og:title" content="Taras Labiak - Resume">
+  <meta property="og:description" content="Node.js, Python and Go Full Stack Developer">
+  <meta property="og:image" content="https://kissarat.github.io/resume/avatar.jpg">
+  <meta property="og:url" content="https://kissarat.github.io/index.htm">
   <link rel="manifest" href="/manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="resume/style.css" />
@@ -405,6 +410,11 @@
                 Gateway, that accepts any URL of prom.ua, parse appropriate
                 page and respond in JSON format
                 <a href="https://github.com/kissarat/prom">https://github.com/kissarat/prom</a>
+              </dd>
+              <dt class="notranslate">Tic-tac-toe</dt>
+              <dd>
+                <a href="/samples/xo.html" class="anchor">Game</a>
+                for two players grid with X or O
               </dd>
               <dt class="notranslate">Code Commenter</dt>
               <dd>
