--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <meta property="og:title" content="Taras Labiak - Resume">
   <meta property="og:description" content="Node.js, Python and Go Full Stack Developer">
   <meta property="og:image" content="https://kissarat.github.io/resume/avatar.jpg">
-  <meta property="og:url" content="https://kissarat.github.io/index.htm">
+  <meta property="og:url" content="https://kissarat.github.io/index.html">
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:profile:first_name" content="Taras" />
+  <meta property="og:profile:last_name" content="Labiak" />
+  <meta property="og:profile:username" content="kissarat" />
+  <meta property="og:profile:gender" content="male" />
+  <meta property="og:locale" content="en_US" />
   <link rel="manifest" href="/manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="resume/style.css" />
