+ video for dominant

--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
               <dd>
                 Google Chrome extension (<a
                   href="https://github.com/kissarat/dominant">https://github.com/kissarat/dominant</a>) for commenting
-                any element of any HTML page. User can see
-                comment of other users
+                any element of any HTML page. User can see comment of other users
+                <a href="https://www.youtube.com/watch?v=XIrySiL7x1g" class="anchor">see video</a>
               </dd>
               <dt class="notranslate">PHP array converter</dt>
               <dd>
